--- a/custom.css
+++ b/custom.css
@@ -91,6 +91,7 @@ form{
     margin: 0.15rem 0rem;
     text-align: center;
     border-radius: 8px!important;
+    color: black!important;
 }
 
 /* For Resizing Form Button */
